Initialize Video Fabric project with mystical dark theme

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,11 +5,19 @@
     "jsx": "react-jsx",
     "strict": true,
     "noEmit": true,
-    "lib": ["es2015"],
+    "lib": [
+      "es2015"
+    ],
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "noUnusedLocals": true
+    "noUnusedLocals": true,
+    "resolveJsonModule": true
   },
-  "exclude": ["remotion.config.ts"]
+  "include": [
+    "src"
+  ],
+  "exclude": [
+    "remotion.config.ts"
+  ]
 }
